--- a/atividade01.html
+++ b/atividade01.html
@@ -66,7 +66,7 @@
 
             var myPoints = [
                 new BABYLON.Vector3(-5, 0, 0),
-                new BABYLON.Vector3(5, 0, 0),
+                new BABYLON.Vector3(0, 0, 0),
             ];
         	
         	//Create lines 
@@ -92,12 +92,13 @@
             for(var i=0; i < 9; i++)
             {
                 var b = BABYLON.MeshBuilder.CreateBox("box", { size: 0.5 }, scene);
-                b.rotation.y =  angle;
                 b.position.x =  -5 ;
+                b.rotation.y =  angle;
                 angle += (Math.PI/4);
                 //b.scaling = new BABYLON.Vector3(s,s,s);
                 //s += 0.18;
                 newMesh.addChild(b);
+                newMesh.rotation.y=angle;
             }
 
             return newMesh;
